--- a/Monopoly/app/src/main/res/layout/scrollviewlayout.xml
+++ b/Monopoly/app/src/main/res/layout/scrollviewlayout.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".GameActivity">
+    android:layout_height="match_parent">
 
 
     <Button
@@ -148,8 +147,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@+id/HorizontalGuideline"
         app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
 
@@ -158,7 +157,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellName"
         app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
@@ -168,7 +167,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellCost"
         app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
@@ -178,24 +177,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellSell"
         app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
 
-
-    <Button
-        android:id="@+id/sellButton"
-        android:background="#7d20f5"
-        android:textColor="#ffffff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sell"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/cellCharge"
-        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline"
-        android:visibility="invisible"
-        android:clickable="false"/>
 
 
     <android.support.constraint.Guideline
@@ -246,24 +232,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/UnderTopPartGuideline" />
 
-    <HorizontalScrollView
-        android:id="@+id/scrollview1"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/scrollViewNatural">
-        <ScrollView
-            android:id="@+id/scrollview2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/ConstraintLayoutScroll"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </android.support.constraint.ConstraintLayout>
-
-        </ScrollView>
-    </HorizontalScrollView>
-
     <Button
         android:id="@+id/buttonSuicide"
         android:background="#7d20f5"
@@ -279,6 +247,3 @@
 
 
 </android.support.constraint.ConstraintLayout>
-
-
-
