--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:id="@+id/main_fab_create"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="bottom|end"
             android:layout_marginEnd="14dp"
             android:layout_marginBottom="14dp"
             android:elevation="15dp"
