--- a/app/src/main/res/layout/main_notes_recycler_header.xml
+++ b/app/src/main/res/layout/main_notes_recycler_header.xml
@@ -9,7 +9,7 @@
         android:layout_height="40dp"
         android:text="@string/other_notes"
         android:textSize="16sp"
-        android:gravity="center_vertical|left"
+        android:gravity="center_vertical|start"
         android:padding="5dp"/>
 
 </LinearLayout>
