--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name ="red">#FF0000</color>
     <color name="colorPrimary">#008577</color>
+    <color name="darkGoldenRod">#B8860B</color>
+    <color name="snow">#FFFAFA</color>
+    <color name="saddleBrown">#8B4513</color>
+    <color name="blue">#0000FF</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
