--- a/Monopoly/app/src/main/res/layout-small-land/activity_game.xml
+++ b/Monopoly/app/src/main/res/layout-small-land/activity_game.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ConstraintLayoutScroll"
+    android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GameActivity">
@@ -14,34 +14,37 @@
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="@string/throw_dices"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/VerticalGuideline2"
+        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline2"
         app:layout_constraintTop_toBottomOf="@id/UnderTopPartGuideline" />
 
     <ImageView
         android:id="@+id/cube1"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="8dp"
         android:contentDescription="@string/dices"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/cube2"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/buttonThrowCubes"
+        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline2"
         app:layout_constraintTop_toBottomOf="@+id/buttonThrowCubes" />
 
     <ImageView
         android:id="@+id/cube2"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="8dp"
         android:contentDescription="@string/dices"
-        app:layout_constraintRight_toRightOf="@+id/cube1"
+        app:layout_constraintEnd_toStartOf="@+id/VerticalGuideline2"
+        app:layout_constraintStart_toStartOf="@+id/DialogView"
         app:layout_constraintTop_toBottomOf="@+id/buttonThrowCubes" />
 
 
@@ -49,44 +52,40 @@
         android:id="@+id/playerStats1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:text=""
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/HorizontalGuideline" />
 
     <TextView
         android:id="@+id/playerStats2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:text=""
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/playerMoney1" />
 
     <TextView
         android:id="@+id/playerStats3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:text=""
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/playerMoney2" />
 
     <TextView
         android:id="@+id/playerStats4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:text=""
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/playerMoney3" />
 
     <TextView
@@ -96,7 +95,7 @@
         android:layout_marginTop="8dp"
         android:text=""
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="@+id/playerStats1"
+        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/playerStats1" />
 
     <TextView
@@ -106,7 +105,7 @@
         android:layout_marginTop="8dp"
         android:text=""
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="@+id/playerStats2"
+        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/playerStats2" />
 
     <TextView
@@ -116,7 +115,7 @@
         android:layout_marginTop="8dp"
         android:text=""
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="@+id/playerStats3"
+        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/playerStats3" />
 
     <TextView
@@ -126,7 +125,7 @@
         android:layout_marginTop="8dp"
         android:text=""
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="@+id/playerStats4"
+        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/playerStats4" />
 
     <android.support.constraint.Guideline
@@ -134,55 +133,61 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5"/>
+        app:layout_constraintGuide_percent="0.0" />
 
     <android.support.constraint.Guideline
         android:id="@+id/VerticalGuideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.67" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/VerticalGuideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.46" />
 
     <TextView
         android:id="@+id/cellName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginTop="5dp"
         android:text=""
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/HorizontalGuideline"
-        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/HorizontalGuideline" />
 
     <TextView
         android:id="@+id/cellCost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:layout_marginStart="15dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/cellName"
-        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
+        android:text=""
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cellName" />
 
     <TextView
         android:id="@+id/cellSell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:layout_marginStart="15dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/cellCost"
-        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
+        android:text=""
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cellCost" />
 
     <TextView
         android:id="@+id/cellCharge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:layout_marginStart="15dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/cellSell"
-        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
-
+        android:text=""
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cellSell" />
 
     <Button
         android:id="@+id/sellButton"
@@ -192,10 +197,11 @@
         android:layout_height="wrap_content"
         android:text="@string/sell"
         android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@+id/cellCharge"
         app:layout_constraintTop_toBottomOf="@+id/cellCharge"
-        app:layout_constraintStart_toEndOf="@+id/VerticalGuideline"
         android:visibility="invisible"
         android:clickable="false"/>
+
 
 
     <android.support.constraint.Guideline
@@ -237,13 +243,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:gravity="center"
         android:clickable="false"
+        android:gravity="center"
         android:text="@string/buyQuestion"
-        android:visibility="invisible"
         android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="@+id/buttonThrowCubes"
+        app:layout_constraintStart_toStartOf="@+id/buttonThrowCubes"
         app:layout_constraintTop_toBottomOf="@id/UnderTopPartGuideline" />
 
     <Button
@@ -254,10 +260,26 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="@string/suicide"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline"
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="visible" />
 
+    <HorizontalScrollView
+        android:id="@+id/scrollview1"
+        android:layout_width="@dimen/scrollViewNatural"
+        android:layout_height="wrap_content">
+        <ScrollView
+            android:id="@+id/scrollview2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/ConstraintLayoutScroll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </android.support.constraint.ConstraintLayout>
+
+        </ScrollView>
+    </HorizontalScrollView>
 
 </android.support.constraint.ConstraintLayout>
