--- a/Monopoly/app/src/main/res/layout-small/activity_game.xml
+++ b/Monopoly/app/src/main/res/layout-small/activity_game.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ConstraintLayoutScroll"
+    android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GameActivity">
@@ -148,8 +148,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/HorizontalGuideline"
         app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
 
@@ -158,7 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellName"
         app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
@@ -168,7 +168,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellCost"
         app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
@@ -178,7 +178,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellSell"
         app:layout_constraintStart_toEndOf="@+id/VerticalGuideline" />
@@ -246,6 +246,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/UnderTopPartGuideline" />
 
+    <HorizontalScrollView
+        android:id="@+id/scrollview1"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/scrollViewNatural">
+        <ScrollView
+            android:id="@+id/scrollview2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/ConstraintLayoutScroll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </android.support.constraint.ConstraintLayout>
+
+        </ScrollView>
+    </HorizontalScrollView>
+
     <Button
         android:id="@+id/buttonSuicide"
         android:background="#7d20f5"
@@ -261,3 +279,6 @@
 
 
 </android.support.constraint.ConstraintLayout>
+
+
+
