added simple UI-tests

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -11,6 +11,7 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/startBtn"
             style="@style/menuButton"
             android:layout_width="@dimen/button_width"
             android:layout_height="wrap_content"
@@ -19,6 +20,7 @@
         </Button>
 
         <Button
+            android:id="@+id/recordds"
             style="@style/menuButton"
             android:layout_width="@dimen/button_width"
             android:layout_height="wrap_content"
@@ -28,6 +30,7 @@
         </Button>
 
         <Button
+            android:id="@+id/exit"
             style="@style/menuButton"
             android:layout_width="@dimen/button_width"
             android:layout_marginTop="@dimen/btw_buttons"
