--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/window"
+    android:id="@+id/gamewindow"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,21 +11,18 @@
         android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:padding="7dp">
 
         <Button
             android:id="@+id/menu_button"
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="12dp"
 
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
             android:background="@drawable/buttonshape"
             android:fontFamily="@font/armata"
             android:shadowColor="#A8A8A8"
@@ -35,20 +31,17 @@
             android:shadowRadius="10"
             android:text="Menu"
             android:textColor="#FFFFFF"
-            android:textSize="17dp" />
+            android:textSize="17sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/pause_button"
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="12dp"
 
             android:background="@drawable/buttonshape"
             android:shadowColor="#A8A8A8"
@@ -58,7 +51,8 @@
             android:text="Pause"
             android:textColor="#FFFFFF"
             android:textSize="17sp"
-            android:fontFamily="@font/armata"/>
+            android:fontFamily="@font/armata"
+            tools:ignore="HardcodedText" />
 
     </RelativeLayout>
 
@@ -90,9 +84,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:fontFamily="@font/abeezee"
-            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
             android:paddingBottom="20dp"
-            android:textSize="30dp"
-            android:visibility="visible" />
+            android:textSize="30sp"
+            android:visibility="visible"
+            tools:ignore="RtlSymmetry" />
     </RelativeLayout>
 </LinearLayout>
