--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="transparent">#FFFFFF</color>
-    <color name="bg">#ded9b0</color>
+    <color name="text">#5b5b5b</color>
+    <color name="wight">#FFFFFF</color>
 </resources>
