--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,10 @@
 
     <style name="normalStyle" parent="AppTheme">
         <item name="android:textColor">#FFFFFF</item>
-        <item name="android:textSize">25dp</item>
+        <item name="android:textSize">25sp</item>
         <item name="android:shadowColor">#A8A8A8</item>
         <item name="android:fontFamily">@font/abeezee</item>
         <item name="android:shadowRadius">8</item>
     </style>
-    <style name="blankStyle" parent="@style/Widget.AppCompat.Button.Borderless"></style>
 
 </resources>
