--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="loading_background">#FAEEFF</color>
     <color name="list_element">#88FFDD</color>
     <color name="list_background">#DDEEFF</color>
+    <color name="Background">#0099cc</color>
 </resources>
