--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -16,10 +16,10 @@
 
         <GridLayout
             android:id="@+id/a_game_sudokuGrid"
-            android:layout_width="350dp"
+            android:layout_width="@dimen/LandGridWidth"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_margin="10dp"
+            android:layout_margin="@dimen/GridLayoutMargin"
             android:layout_weight="0" />
 
         <LinearLayout
@@ -32,12 +32,12 @@
                 android:id="@+id/a_game_check"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_margin="@dimen/LandButtonMargin"
                 android:layout_weight="2"
                 android:backgroundTint="@android:color/holo_orange_light"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/checkButton"
-                android:textSize="20sp" />
+                android:textSize="@dimen/ButtonTextSize" />
 
             <Space
                 android:layout_width="wrap_content"
@@ -48,27 +48,27 @@
                 android:id="@+id/a_game_chrono"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="30dp"
+                android:layout_margin="@dimen/ChronoMargin"
                 android:layout_weight="0"
                 android:gravity="center"
                 android:textColor="@android:color/white"
-                android:textSize="30sp" />
+                android:textSize="@dimen/ChronoTextSize" />
 
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="3" />
+                android:layout_weight="4" />
 
             <Button
                 android:id="@+id/a_game_help"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_margin="@dimen/LandButtonMargin"
                 android:layout_weight="2"
                 android:backgroundTint="@android:color/holo_green_light"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/tip"
-                android:textSize="20sp" />
+                android:textSize="@dimen/ButtonTextSize" />
         </LinearLayout>
 
 
@@ -87,15 +87,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_margin="@dimen/TextMargin"
             android:fontFamily="monospace"
             android:text="@string/load"
             android:textColor="@color/loading_text"
-            android:textSize="40sp" />
+            android:textSize="@dimen/LoadingTextSize" />
 
         <ProgressBar
-            android:layout_width="150dp"
-            android:layout_height="250dp" />
+            android:layout_width="@dimen/ProgressBarWidth"
+            android:layout_height="@dimen/ProgressBarHeight" />
     </LinearLayout>
 
 </FrameLayout>
