--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="@color/Background"
     tools:context=".MainMenuActivity"
     android:id="@+id/activity_main_menu">
 
@@ -23,50 +23,50 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="7dp"
+            android:layout_margin="@dimen/MainMenuMargin"
             android:fontFamily="casual"
             android:text="@string/sudoku"
-            android:textSize="60sp"
+            android:textSize="@dimen/TitleTextSize"
             android:layout_weight="1"/>
 
         <Button
             android:id="@+id/a_menu_PLAY"
-            android:layout_width="180dp"
-            android:layout_height="60dp"
-            android:layout_margin="7dp"
+            android:layout_width="@dimen/MainMenuButtonWidth"
+            android:layout_height="@dimen/MainMenuButtonHeight"
+            android:layout_margin="@dimen/MainMenuMargin"
             android:backgroundTint="@android:color/background_light"
             android:text="@string/play"
-            android:textSize="20sp"
+            android:textSize="@dimen/ButtonTextSize"
             android:layout_weight="1"/>
 
         <Button
             android:id="@+id/a_menu_RECORDS"
-            android:layout_width="180dp"
-            android:layout_height="60dp"
-            android:layout_margin="7dp"
+            android:layout_width="@dimen/MainMenuButtonWidth"
+            android:layout_height="@dimen/MainMenuButtonHeight"
+            android:layout_margin="@dimen/MainMenuMargin"
             android:backgroundTint="@android:color/background_light"
             android:text="@string/records"
-            android:textSize="20sp"
+            android:textSize="@dimen/ButtonTextSize"
             android:layout_weight="1"/>
 
         <Button
             android:id="@+id/a_menu_ABOUT"
-            android:layout_width="180dp"
-            android:layout_height="60dp"
-            android:layout_margin="7dp"
+            android:layout_width="@dimen/MainMenuButtonWidth"
+            android:layout_height="@dimen/MainMenuButtonHeight"
+            android:layout_margin="@dimen/MainMenuMargin"
             android:backgroundTint="@android:color/background_light"
             android:text="@string/aboutAuthor"
-            android:textSize="20sp"
+            android:textSize="@dimen/ButtonTextSize"
             android:layout_weight="1"/>
 
         <Button
             android:id="@+id/a_menu_EXIT"
-            android:layout_width="180dp"
-            android:layout_height="60dp"
-            android:layout_margin="7dp"
+            android:layout_width="@dimen/MainMenuButtonWidth"
+            android:layout_height="@dimen/MainMenuButtonHeight"
+            android:layout_margin="@dimen/MainMenuMargin"
             android:backgroundTint="@android:color/holo_red_light"
             android:text="@string/exit"
-            android:textSize="20sp"
+            android:textSize="@dimen/ButtonTextSize"
             android:layout_weight="1"/>
 
         <Space
