--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -10,8 +10,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:layout_margin="10dp"
+        android:textSize="@dimen/NormalTextSize"
+        android:layout_margin="@dimen/TextMargin"
         android:text="@string/records"
         android:fontFamily="casual"/>
     <ListView
